--- a/6_Word2vec.ipynb
+++ b/6_Word2vec.ipynb
@@ -10,12 +10,17 @@
    "source": [
     "# Notes\n",
     "#1. Word2vec can only use Python3 because Py2 have the ASC code error\n",
-    "#2. Therefore, use \"source activate nlp3\" and then \"jupyter notebook\""
+    "#2. Therefore, use \"source activate nlp3\" and then \"jupyter notebook\"\n",
+    "\n",
+    "# Word2Vec\n",
+    "#1. It's a kind of method which is faster than some deep learning algorithms\n",
+    "#2. Do not need labels, it can generated labels automatically based on relationships between words.\n",
+    "#3. Because it cares relationships, don't remove stop words and numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -24,110 +29,116 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read 25000 labeled train reviews, 25000 labeled test reviews, and 50000 unlabeled reviews\n",
-      "\n"
+      "25000 25000 50000\n",
+      "\n",
+      "\n",
+      "\"With all this stuff going down at the moment with MJ i've started listening to his music, watching the odd documentary here and there, watched The Wiz and watched Moonwalker again. Maybe i just want to get a certain insight into this guy who i thought was really cool in the eighties just to maybe make up my mind whether he is guilty or innocent. Moonwalker is part biography, part feature film which i remember going to see at the cinema when it was originally released. Some of it has subtle messages about MJ's feeling towards the press and also the obvious message of drugs are bad m'kay.<br /><br />Visually impressive but of course this is all about Michael Jackson so unless you remotely like MJ in anyway then you are going to hate this and find it boring. Some may call MJ an egotist for consenting to the making of this movie BUT MJ and most of his fans would say that he made it for the fans which if true is really nice of him.<br /><br />The actual feature film bit when it finally starts is only on for 20 minutes or so excluding the Smooth Criminal sequence and Joe Pesci is convincing as a psychopathic all powerful drug lord. Why he wants MJ dead so bad is beyond me. Because MJ overheard his plans? Nah, Joe Pesci's character ranted that he wanted people to know it is he who is supplying drugs etc so i dunno, maybe he just hates MJ's music.<br /><br />Lots of cool things in this like MJ turning into a car and a robot and the whole Speed Demon sequence. Also, the director must have had the patience of a saint when it came to filming the kiddy Bad sequence as usually directors hate working with one kid let alone a whole bunch of them performing a complex dance scene.<br /><br />Bottom line, this movie is for people who like MJ on one level or another (which i think is most people). If not, then stay away. It does try and give off a wholesome message and ironically MJ's bestest buddy in this movie is a girl! Michael Jackson is truly one of the most talented people ever to grace this planet but is he guilty? Well, with all the attention i've gave this subject....hmmm well i don't know because people can be different behind closed doors, i know this for a fact. He is either an extremely nice but stupid guy or one of the most sickest liars. I hope he is not the latter.\"\n",
+      "\n",
+      "\n",
+      "Index(['id', 'sentiment', 'review'], dtype='object') Index(['id', 'review'], dtype='object') Index(['id', 'review'], dtype='object')\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Read data from files \n",
-    "train = pd.read_csv( \"labeledTrainData.tsv\", header=0, \n",
-    " delimiter=\"\\t\", quoting=3 )\n",
-    "test = pd.read_csv( \"testData.tsv\", header=0, delimiter=\"\\t\", quoting=3 )\n",
-    "unlabeled_train = pd.read_csv( \"unlabeledTrainData.tsv\", header=0, \n",
-    " delimiter=\"\\t\", quoting=3 )\n",
+    "# Read data\n",
+    "train = pd.read_csv(\"labeledTrainData.tsv\", delimiter = \"\\t\", quoting = 3)\n",
+    "test = pd.read_csv(\"testData.tsv\", delimiter = \"\\t\", quoting = 3)\n",
+    "unlabeled_train = pd.read_csv(\"unlabeledTrainData.tsv\", delimiter = \"\\t\", quoting = 3)\n",
     "\n",
-    "# Verify the number of reviews that were read (100,000 in total)\n",
-    "print(\"Read %d labeled train reviews, %d labeled test reviews, \" \\\n",
-    " \"and %d unlabeled reviews\\n\" % (train[\"review\"].size,  \n",
-    " test[\"review\"].size, unlabeled_train[\"review\"].size ))"
+    "# print\n",
+    "print(train[\"review\"].size, test[\"review\"].size, unlabeled_train[\"review\"].size)\n",
+    "print(\"\\n\")\n",
+    "print(train[\"review\"][0])\n",
+    "print(\"\\n\")\n",
+    "print(train.columns, test.columns, unlabeled_train.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Import various modules for string cleaning\n",
+    "# Clean data (remove html, non-letters, lower case, split)\n",
     "from bs4 import BeautifulSoup\n",
     "import re\n",
     "from nltk.corpus import stopwords\n",
     "\n",
-    "def review_to_wordlist( review, remove_stopwords=False ):\n",
-    "    # Function to convert a document to a sequence of words,\n",
-    "    # optionally removing stop words.  Returns a list of words.\n",
-    "    #\n",
-    "    # 1. Remove HTML\n",
+    "def review_to_wordlist(review, remove_stopwords = False):\n",
     "    review_text = BeautifulSoup(review, \"lxml\").get_text()\n",
-    "    #  \n",
-    "    # 2. Remove non-letters\n",
-    "    review_text = re.sub(\"[^a-zA-Z]\",\" \", review_text)\n",
-    "    #\n",
-    "    # 3. Convert words to lower case and split them\n",
+    "    review_text = re.sub(\"[^a-zA-Z]\", \" \", review_text)\n",
     "    words = review_text.lower().split()\n",
-    "    #\n",
-    "    # 4. Optionally remove stop words (false by default)\n",
+    "    \n",
     "    if remove_stopwords:\n",
     "        stops = set(stopwords.words(\"english\"))\n",
     "        words = [w for w in words if not w in stops]\n",
-    "    #\n",
-    "    # 5. Return a list of words\n",
     "    return(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['with',\n",
+       " 'all',\n",
+       " 'this',\n",
+       " 'stuff',\n",
+       " 'going',\n",
+       " 'down',\n",
+       " 'at',\n",
+       " 'the',\n",
+       " 'moment',\n",
+       " 'with']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Download the punkt tokenizer for sentence splitting\n",
-    "import nltk.data\n",
-    "nltk.download()   \n",
+    "# Test\n",
+    "list_1 = review_to_wordlist(train[\"review\"][0])\n",
+    "list_1[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Punkt tokenizer to split paragraphs to sentences\n",
+    "# Above \"review_to_wordlist\" function is to split sentences into wordlist\n",
+    "# paragraphs -> sentences -> wordlists 讓每句sentence都有自己的wordlist\n",
     "\n",
-    "# Load the punkt tokenizer\n",
+    "import nltk.data\n",
     "tokenizer = nltk.data.load('tokenizers/punkt/english.pickle')\n",
     "\n",
-    "# Define a function to split a review into parsed sentences\n",
-    "def review_to_sentences( review, tokenizer, remove_stopwords=False ):\n",
-    "    # Function to split a review into parsed sentences. Returns a \n",
-    "    # list of sentences, where each sentence is a list of words\n",
-    "    #\n",
-    "    # 1. Use the NLTK tokenizer to split the paragraph into sentences\n",
+    "def review_to_sentences(review, tokenizer, remove_stopwords = False):\n",
     "    raw_sentences = tokenizer.tokenize(review.strip())\n",
-    "    #\n",
-    "    # 2. Loop over each sentence\n",
     "    sentences = []\n",
-    "    for raw_sentence in raw_sentences:\n",
-    "        # If a sentence is empty, skip it\n",
-    "        if len(raw_sentence) > 0:\n",
-    "            # Otherwise, call review_to_wordlist to get a list of words\n",
-    "            sentences.append( review_to_wordlist( raw_sentence, \\\n",
-    "              remove_stopwords ))\n",
-    "    #\n",
-    "    # Return the list of sentences (each sentence is a list of words,\n",
-    "    # so this returns a list of lists\n",
+    "    for i in raw_sentences:\n",
+    "        if len(i) > 0:\n",
+    "            sentences.append(review_to_wordlist(i, remove_stopwords))\n",
     "    return sentences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -136,9 +147,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parsing sentences from training set\n"
+      "['\"With all this stuff going down at the moment with MJ i\\'ve started listening to his music, watching the odd documentary here and there, watched The Wiz and watched Moonwalker again.', 'Maybe i just want to get a certain insight into this guy who i thought was really cool in the eighties just to maybe make up my mind whether he is guilty or innocent.']\n",
+      "\n",
+      "\n",
+      "[['with', 'all', 'this', 'stuff', 'going', 'down', 'at', 'the', 'moment', 'with', 'mj', 'i', 've', 'started', 'listening', 'to', 'his', 'music', 'watching', 'the', 'odd', 'documentary', 'here', 'and', 'there', 'watched', 'the', 'wiz', 'and', 'watched', 'moonwalker', 'again'], ['maybe', 'i', 'just', 'want', 'to', 'get', 'a', 'certain', 'insight', 'into', 'this', 'guy', 'who', 'i', 'thought', 'was', 'really', 'cool', 'in', 'the', 'eighties', 'just', 'to', 'maybe', 'make', 'up', 'my', 'mind', 'whether', 'he', 'is', 'guilty', 'or', 'innocent']]\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# Test\n",
+    "list_2 = tokenizer.tokenize(train[\"review\"][0].strip())\n",
+    "print(list_2[0:2])\n",
+    "print(\"\\n\")\n",
+    "list_3 = review_to_sentences(train[\"review\"][0], tokenizer, remove_stopwords = False)\n",
+    "print(list_3[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
@@ -153,7 +184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parsing sentences from unlabeled set\n"
+      "Parsing now\n"
      ]
     },
     {
@@ -176,25 +207,78 @@
     }
    ],
    "source": [
-    "sentences = []  # Initialize an empty list of sentences\n",
+    "# Start to make paragraph into list of words\n",
     "\n",
-    "print(\"Parsing sentences from training set\")\n",
-    "for review in train[\"review\"]:\n",
-    "    sentences += review_to_sentences(review, tokenizer)\n",
+    "sentences = []\n",
+    "for i in train[\"review\"]:\n",
+    "    sentences += review_to_sentences(i, tokenizer)\n",
     "\n",
-    "print(\"Parsing sentences from unlabeled set\")\n",
-    "for review in unlabeled_train[\"review\"]:\n",
-    "    sentences += review_to_sentences(review, tokenizer)"
+    "print(\"Parsing now\")\n",
+    "for j in unlabeled_train[\"review\"]:\n",
+    "    sentences += review_to_sentences(j, tokenizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "795538\n",
+      "\n",
+      "\n",
+      "['with', 'all', 'this', 'stuff', 'going', 'down', 'at', 'the', 'moment', 'with', 'mj', 'i', 've', 'started', 'listening', 'to', 'his', 'music', 'watching', 'the', 'odd', 'documentary', 'here', 'and', 'there', 'watched', 'the', 'wiz', 'and', 'watched', 'moonwalker', 'again']\n",
+      "\n",
+      "\n",
+      "['maybe', 'i', 'just', 'want', 'to', 'get', 'a', 'certain', 'insight', 'into', 'this', 'guy', 'who', 'i', 'thought', 'was', 'really', 'cool', 'in', 'the', 'eighties', 'just', 'to', 'maybe', 'make', 'up', 'my', 'mind', 'whether', 'he', 'is', 'guilty', 'or', 'innocent']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(sentences))\n",
+    "print(\"\\n\")\n",
+    "print(sentences[0])\n",
+    "print(\"\\n\")\n",
+    "print(sentences[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named 'gensim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-44-66482013fb27>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasicConfig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'%(asctime)s : %(levelname)s : %(message)s'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mINFO\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mgensim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mword2vec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Training model...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mword2vec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWord2Vec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mworkers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwindow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m                          \u001b[0msample\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'gensim'"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "logging.basicConfig(format = '%(asctime)s : %(levelname)s : %(message)s', level = logging.INFO)\n",
+    "\n",
+    "from gensim.models import word2vec\n",
+    "print(\"Training model...\")\n",
+    "model = word2vec.Word2Vec(sentences, workers = 4, size = 300, min_count = 40, window = 10, \\\n",
+    "                         sample = 0.001)\n",
+    "\n",
+    "model.init_sims(replace = True)\n",
+    "model_name = \"300features_40minwords\"\n",
+    "model.save(model_name) #We can load it using Word2Vec.load()"
+   ]
   },
   {
    "cell_type": "code",
